# MisogiAI

DataStructures_In_Python/: browser_history_deque.py  data_pairing_zip.py  grade_analyzer.py  inventory_managemnet.py  membership_properties.py  sales_data_analysis.py  school_management_system.py  shopping_cart_manager.py  sorting_reversing.py  student_records.py  website_analytics.py
DockerAndDeployment/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
DockerAndDeployment/alembic/: env.py
DockerAndDeployment/alembic/versions/: README
DockerAndDeployment/app/api/: main.py  routes.py
DockerAndDeployment/app/celery_worker/: celery.py  tasks.py
DockerAndDeployment/app/core/: config.py
DockerAndDeployment/app/crud/: menu.py
DockerAndDeployment/app/db/: models.py  session.py
DockerAndDeployment/app/schemas/: menu.py
DockerAndDeployment/nginx/: nginx.conf
Intro_To_Python/: higher_order_function_implementation.py  lambda_function_library.py  list_comprehension_converter.py  modular_program_design.py  multi_format_string_displayer.py  one_liner_challenges.py  personal_information_collector.py  simple_shopping_calculator.py  temperature_conversion_functions.py  user_input_validator.py
MathBehindML/: email_spam_bayes_theorem.py  simulate_rolling_two_dice.py  vector_operations.py
OOPs_In_Python/: bank_account_managemnet.py  default_dict_student_management_system.py  e-shopping_commerce_cart.py  social_media_friendship_analyser.py  student_course_management_system.py  text_analysis_tool.py
Pydantic_And_DB/: README.md  (+4 more)
(+62 files in other folders)
